// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<DashboardPage /> > should refetch data when name filter is set 1`] = `
"NameDescriptionModified DateundefinedPrevious1undefinedMore pagesNext
undefined"
`;

exports[`<DashboardPage /> > should render the table content properly 1`] = `
"NameDescriptionModified DateBukuBuku2023-08-11T10:39:47ZundefinedundefinedPrevious1undefinedMore pagesNext
undefined"
`;
